--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint .",
     "start": "ts-node src/worker.ts",
     "start.watch": "nodemon src/worker.ts",
+    "api": "ts-node src/api.ts",
     "test": "mocha --require ts-node/register --require source-map-support/register src/mocha/*.test.ts",
     "test.watch": "mocha --require ts-node/register --require source-map-support/register src/mocha/*.test.ts -w --watch-files src",
     "test.coverage": "nyc --reporter=lcov --reporter=text-summary mocha --require ts-node/register --require source-map-support/register src/mocha/*.test.ts",
@@ -31,12 +32,15 @@
     "@temporalio/common": "^1.13.1",
     "@temporalio/worker": "^1.13.1",
     "@temporalio/workflow": "^1.13.1",
+    "@types/express": "^5.0.5",
     "axios": "^0.28.0",
+    "express": "^5.1.0",
     "node-fetch": "2.x"
   },
   "devDependencies": {
     "@temporalio/nyc-test-coverage": "^1.13.1",
     "@temporalio/testing": "^1.13.1",
+    "@tsconfig/node24": "^24.0.0",
     "@types/jest": "^27.5.1",
     "@types/mocha": "8.x",
     "@types/node": "^22.9.1",
@@ -59,7 +63,6 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "uuid": "^8.3.2",
-    "webpack": "5.96.1",
-    "@tsconfig/node24": "^24.0.0"
+    "webpack": "5.96.1"
   }
 }
